--- a/ApiNewProject/pom.xml
+++ b/ApiNewProject/pom.xml
@@ -19,11 +19,12 @@
     </repositories>
     <dependencies>
 
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>6.9.8</version>
-        </dependency>
+    <dependency>
+  <groupId>org.testng</groupId>
+  <artifactId>testng</artifactId>
+  <version>7.6.0</version>
+  <scope>test</scope>
+</dependency>
 
        <dependency>
         <groupId>org.apache.poi</groupId>
